# gtkrufs

./: LICENSE.txt  README.md  gtkrufs.py  gtkrufs.service  pyproject.toml
